# memhub

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  NEXT_STEPS.md  README.md  THIRD-PARTY-NOTICES.md  build.rs  opencode.json
.claude/commands/: wrap-up.md
.github/workflows/: audit.yml  ci.yml
.memhub/: config.example.toml
agent_docs/: .init-version  PROJECT.md  PROJECT_LEDGER.md  project_arch.md  project_backlog.md  project_decisions.md  project_state.md
docs/architecture/: current-architecture.md
docs/archive/: Local Agent Memory PRD.md  README.md  current-architecture.md  k9-consumer-audit-prompt.md  k9-deprecation-plan.md  k9-integration.md  memhub-primary-evaluation.md  memhub-render-design.md  milestones.md  prd-implementation-notes.md  wrap-up-design.md
docs/handoff/: m11-chunker-fixes.md
docs/reference/: export-format.md  k9-consumer-audit-prompt.md  k9-wrap-up-contract.md  memhub-prd-addendum-m10-drive-sync.md  memhub-prd-addendum-m11-code-locator.md  memhub-prd-addendum-m8-retrieval.md  memhub-prd-addendum-m9-machine-global-memory.md  memhub-prd-deprecation-addendum.md  memhub-prd-source-vocabulary-addendum.md  operations.md  prd-implementation-notes.md
docs/reviews/: 2026-07-improvement-review.md  2026-07-improvement-tracker.md
docs/roadmap/: k9-deprecation-plan.md  k9-integration.md  memhub-primary-evaluation.md  memhub-render-design.md  milestones.md  wrap-up-design.md
examples/: rerank_bakeoff.rs
migrations/: 0001_initial.sql  0002_git_search.sql  0003_pending_writes.sql  0004_pending_write_provenance.sql  0005_pending_write_reviewed_at.sql  0006_session_notes.sql  0007_project_narrative.sql  0008_decisions_source.sql  0009_retrieval_indexes.sql  0010_embeddings_delete_triggers.sql  0011_decision_summary.sql  0012_metrics_tables.sql  0013_session_turn_metrics.sql  0014_documents.sql  0015_known_projects.sql  0016_global_accept_markers.sql  0017_session_baseline.sql  0018_supersede.sql  0019_metrics_maintenance_debounce.sql  0020_recall_metrics_surface.sql  0021_fact_kind.sql  0022_source_type_note.sql  0023_session_transcripts.sql
scripts/: review_two_pass.py
src/: agents_md.rs  lib.rs  main.rs  managed_block.rs  transcript_files.rs
src/cli/: args.rs  mod.rs  output.rs
src/code_index/: chunker.rs  grammar.rs  locate.rs  mod.rs  schema.rs  walker.rs
src/commands/: audit_md.rs  bootstrap_k9.rs  command.rs  decision.rs  doc.rs  doctor.rs  eval.rs  export.rs  fact.rs  gc.rs  global.rs  import.rs  index.rs  ingest_git.rs  init.rs  install_manifest.rs  integrations.rs  metrics.rs  mod.rs  narrative.rs  pending_write.rs  render.rs  review.rs  search.rs  session_note.rs  stats.rs  status.rs  sync.rs  sync_md.rs  task.rs  transcript.rs  upgrade.rs  wrapup_policy.rs
src/config/: deny.rs  integrations.rs  mod.rs
src/dashboard/: mod.rs
src/dashboard/static/: app.css  app.js  index.html
src/db/: migrations.rs  mod.rs  registry.rs
src/errors/: mod.rs
src/export/: mod.rs  v1.rs
src/logging/: mod.rs
src/mcp/: mod.rs
src/metrics/: calibrate.rs  calibration_corpus.txt  formatter.rs  maintenance.rs  mod.rs  recall_proxy.rs  session_scraper.rs  tokenizer.rs
src/models/: mod.rs
src/render/: mod.rs
src/retrieval/: embeddings.rs  mod.rs  persist.rs  recall.rs  rerank.rs  util.rs
src/sync_md/: mod.rs
templates/commands/opencode/: audit-md.md  catch-up.md  check-init.md  doc.md  eval-recall.md  global.md  init-project.md  locate.md  metrics.md  recall.md  reindex.md  upgrade.md  viz.md  wrap-up.md
templates/skills/claude/: audit-md.md  catch-up.md  check-init.md  doc.md  eval-recall.md  global.md  init-project.md  locate.md  metrics.md  recall.md  reindex.md  upgrade.md  viz.md  wrap-up.md
templates/skills/codex/audit-md/: SKILL.md
templates/skills/codex/catch-up/: SKILL.md
templates/skills/codex/check-init/: SKILL.md
templates/skills/codex/doc/: SKILL.md
templates/skills/codex/eval-recall/: SKILL.md
templates/skills/codex/global/: SKILL.md
templates/skills/codex/init-project/: SKILL.md
templates/skills/codex/locate/: SKILL.md
templates/skills/codex/metrics/: SKILL.md
templates/skills/codex/recall/: SKILL.md
templates/skills/codex/reindex/: SKILL.md
templates/skills/codex/upgrade/: SKILL.md
templates/skills/codex/viz/: SKILL.md
templates/skills/codex/wrap-up/: SKILL.md
templates/skills/opencode/audit-md/: SKILL.md
templates/skills/opencode/catch-up/: SKILL.md
templates/skills/opencode/check-init/: SKILL.md
tests/: audit_md.rs  bootstrap_k9.rs  cli_args.rs  code_index.rs  code_locate_golden.json  code_locate_golden_polyglot.json  config_example.rs  discover_outside_repo.rs  export_import.rs  foundation.rs  global_memory.rs  k9_contract.rs  lifecycle_harness.rs  locate.rs  locate_polyglot.rs  m8_retrieval_embed.rs  m8_retrieval_eval.rs  m8_retrieval_schema.rs  mcp_protocol.rs  metrics_maintenance.rs  metrics_session_scraper.rs  metrics_tokenizer.rs  migrations_auto_apply.rs  milestone2.rs  render.rs  retrieval_golden.json  retrieval_golden_hermetic.rs  retrieval_harness.rs  review.rs  session_notes.rs  skill_parity.rs  staleness.rs  stats.rs  sync_md.rs  upgrade_audit_nag.rs  upgrade_degrade.rs  upgrade_harness.rs  upgrade_manifest.rs  upgrade_registry.rs  upgrade_resync_transient.rs  (+1 more)
tests/fixtures/: claude_session_sample.jsonl
tests/lifecycle/: audit_md.rs  cli_args.rs  config_example.rs  export_import.rs  foundation.rs  mcp_protocol.rs  metrics_session_scraper.rs  narrative.rs  render.rs  review.rs  review_stale.rs  staleness.rs  status_health.rs  sync_md.rs  transcript_archive.rs  wrapup_policy.rs
tests/retrieval/: code_index.rs  deny_list.rs  locate.rs  locate_polyglot.rs  m8_retrieval_embed.rs  m8_retrieval_schema.rs  retrieval_golden_hermetic.rs
tests/upgrade/: bootstrap_k9.rs  discover_outside_repo.rs  global_memory.rs  integrations.rs  json_contracts.rs  k9_contract.rs  migrations_auto_apply.rs  skill_parity.rs  support.rs  upgrade_audit_nag.rs  upgrade_degrade.rs  upgrade_manifest.rs  upgrade_registry.rs  upgrade_resync_transient.rs  upgrade_skills.rs
(+11 files in other folders)
