[package]
name = "memhub"
version = "0.1.0"
edition = "2024"
description = "Local-first project memory for Codex and Claude Code."
license = "MIT"
repository = "https://github.com/kninetimmy/memhub"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"], optional = true }
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls"] }
globset = "0.4"
log = "0.4.28"
rmcp = { version = "1.5.0", features = ["server", "macros", "schemars", "transport-io"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
thiserror = "2.0.17"
# tiktoken cl100k_base BPE; vendored at compile time via include_str!
# inside the crate, no runtime network calls. Used by
# src/metrics/tokenizer.rs for the opt-in token-accounting subsystem
# (decision 74). Acknowledged ~+/-10% estimate vs Anthropic's real
# tokenizer; we use it symmetrically across both sides of every
# comparison so the ratio stays sound.
tiktoken-rs = "0.11"
tokio = { version = "1.48.0", features = ["io-std", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.8.23"
tower-http = { version = "0.6", features = ["trace"], optional = true }

[features]
default = ["viz"]
viz = ["dep:axum", "dep:tower-http"]

[build-dependencies]
sha2 = "0.10"
ureq = { version = "2.10", default-features = false, features = ["tls"] }

[dev-dependencies]
tempfile = "3.20.0"
# Used only by examples/rerank_bakeoff.rs (task #20 bake-off harness).
anyhow = "1"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
