[package]
name = "memhub"
version = "0.1.0"
edition = "2024"
description = "Local-first project memory for Codex and Claude Code."
license = "MIT"
repository = "https://github.com/kninetimmy/memhub"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"], optional = true }
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls"] }
globset = "0.4"
log = "0.4.28"
rmcp = { version = "1.5.0", features = ["server", "macros", "schemars", "transport-io"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
thiserror = "2.0.17"
# tiktoken cl100k_base BPE; vendored at compile time via include_str!
# inside the crate, no runtime network calls. Used by
# src/metrics/tokenizer.rs for the opt-in token-accounting subsystem
# (decision 74). Acknowledged ~+/-10% estimate vs Anthropic's real
# tokenizer; we use it symmetrically across both sides of every
# comparison so the ratio stays sound.
tiktoken-rs = "0.11"
tokio = { version = "1.48.0", features = ["io-std", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.8.23"
# tree-sitter grammars for the M11 code locator's AST chunker
# (decisions 107, 115). Each grammar depends on `tree-sitter-language`,
# not on a specific tree-sitter version, so they resolve independently;
# each compiles a vendored C parser at build time (no runtime network
# calls). A new language adds a grammar crate here plus a GrammarSpec
# row in src/code_index/grammar.rs.
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tower-http = { version = "0.6", features = ["trace"], optional = true }
# Minimal blocking HTTP+TLS client, used by exactly one code path:
# `memhub metrics calibrate` (src/metrics/calibrate.rs), the one-time
# tokenizer calibration against Anthropic's count_tokens endpoint (task
# 63). Compiled in but never reached during normal operation, so the
# offline-first guarantee holds — the network is touched only when a
# user explicitly runs that command. Already vendored as a build- and
# dev-dependency for the HF asset fetch and the rerank bake-off.
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
# zstd compression for the opt-in session-transcript archiver (Wave 6 W3,
# issue #96 / decision Q7). Used only by src/commands/transcript.rs to
# compress a copy of the raw session JSONL into
# `.memhub/transcripts/<date>-<session-id>.jsonl.zst`. zstd-sys vendors and
# compiles the C library at build time (no runtime network), same posture
# as rusqlite's bundled SQLite. New dependency explicitly approved by the
# user for this feature.
zstd = "0.13"

[features]
default = ["viz"]
viz = ["dep:axum", "dep:tower-http"]

# Dev/test artifacts are enormous here because the bge-small + MiniLM
# ONNX models are `include_bytes!`'d into every binary (~250 MB of real
# payload) and full DWARF then ~4xs that. `line-tables-only` keeps
# readable panic / `cargo test` backtraces (file:line) while dropping
# the heavy variable/type debug info — cutting each debug artifact
# ~3-5x. For a rare interactive lldb session build once with
# `RUSTFLAGS="-g" cargo build`, then reclaim with `memhub gc`.
# Commit-back-here: keep this in parity across machines.
[profile.dev]
debug = "line-tables-only"

# Test runs were the main driver of target/debug/incremental bloat (40+ GiB):
# each `cargo test` recompiles the memhub crate with its `include_bytes!`'d
# ONNX models under the `test` profile, and incremental codegen caches a copy
# per change. `memhub gc` cannot reclaim incremental/ (deleting it only slows
# the next build), so we disable incremental for test builds outright — full
# rebuilds here are acceptable and CI never reuses the cache anyway. The `dev`
# profile keeps incremental on for fast iterative `cargo build`/`cargo run`.
[profile.test]
incremental = false

[build-dependencies]
sha2 = "0.10"
ureq = { version = "2.10", default-features = false, features = ["tls"] }

[dev-dependencies]
tempfile = "3.20.0"
# Used only by examples/rerank_bakeoff.rs (task #20 bake-off harness).
anyhow = "1"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
